--- a/plugin.xml
+++ b/plugin.xml
@@ -13,6 +13,9 @@
                 <param name="ios-package" value="CDVIdfa"/>
             </feature>
         </config-file>
+        
+        <framework src="AdSupport.framework" weak="true" />
+        
         <header-file src="src/ios/CDVIdfa.h" />
         <source-file src="src/ios/CDVIdfa.m" />
     </platform>
